--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "feather-icons": "^4.28.0",
+    "lodash": "^4.17.19",
+    "node-sass": "^4.14.1",
+    "sass-loader": "^9.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
